[tool.poetry]
name = "gtc-downloader"
version = "0.1.0"
description = ""
authors = ["Philpax <me@philpax.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
requests = "^2.31.0"
tqdm = "^4.66.2"
bs4 = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
